Added exclusive admin privileges for viewing report and edit/remove recoreds
